apps/prod/ws.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
spec:
  replicas: 1
  selector:
    matchLabels: { app: ws }
  template:
    metadata:
      labels: { app: ws }
    spec:
      containers:
        - name: ws
          # TODO: replace with ghcr.io/<owner>/<image>:<tag>
          image: traefik/whoami:v1.10.2
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: ws
spec:
  selector: { app: ws }
  ports: [{ port: 80, targetPort: 80 }]
