apps/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: prod-cartyx-tls
      hosts:
        - app.cartyx.io
        - ws.cartyx.io
  rules:
    - host: app.cartyx.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: ws.cartyx.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws
                port:
                  number: 80
